--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,35 +17,11 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data/
     environment:
-      - POSTGRES_USER=hello_django
-      - POSTGRES_PASSWORD=hello_django
-      - POSTGRES_DB=hello_django_dev
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=postgres
 
 volumes:
   postgres_data:
 
-# version: "3.8"
-   
-# services:
-#   db:
-#     image: postgres
-#     environment:
-#       - POSTGRES_DB=postgres
-#       - POSTGRES_USER=postgres
-#       - POSTGRES_PASSWORD=postgres
-#     ports:
-#       - "5432:5432"
-#     volumes: 
-#       - ./../postgres_volume:/var/lib/postgresql/data
-  
-#   web:
-#     build: .
-#     command: python manage.py runserver 0.0.0.0:8000
-#     #command: bash -c "./wait-for-it.sh db:5432"
-#     volumes:
-#       - .:/code
-#     ports:
-#       - "8000:8000"
-#     depends_on:
-#       - db
-      
+ 
